# web-spider

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  security-review.md
.github/workflows/: rust.yml
docs/: tauri.md
src/: App.vue  lib.rs  main.rs  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: download-ffmpeg.cjs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cast.rs  cast_remote_page.html  converter.rs  mod.rs  player.rs  sniffer.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: converter.rs  dlna.rs  download.rs  downloader.rs  hls_server.rs  mod.rs  remux.rs  scraper.rs  sniffer.rs  transcode.rs  ytdlp.rs  ytdlp_download.rs
src-tauri/src/services/cast/: core.rs  dlna.rs  hls_proxy.rs  mod.rs
src-tauri/src/services/scraper/: d1_spider.rs  d2_spider.rs  mod.rs  nine_spider.rs  srl_spider.rs
src/components/: AddTaskDialog.vue  ConfigPage.vue  DlnaCastDialog.vue  IconButton.vue  LogPopup.vue  ScraperPage.vue  SettingsPage.vue  VideoPlayer.vue  YtdlpDownload.vue
src/services/: api.ts
src/views/: ConverterView.vue  DownloadView.vue  LocalView.vue  ScraperView.vue  SettingsView.vue  SnifferView.vue
