[package]
name = "m3u8-web-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tower-livereload = "0.9"
notify = { version = "6" }
futures = "0.3"

[features]
default = ["server"]
server = []

[profile.release]
opt-level = "s"
lto = true
