[package]
name = "web-spider"
version = "0.1.0"
description = "M3U8 Video Scraper & Downloader"
authors = ["you"]
edition = "2021"

[lib]
name = "web_spider_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-ico", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1"
# headless_chrome 用于爬虫
headless_chrome = "1.0"
url = "2"
percent-encoding = "2"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2"
# HLS HTTP 服务器
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
# DLNA 投屏
crab-dlna = "0.1"
# HTTP 服务器 (用于投屏媒体流)
warp = "0.3"
# 本地网络 IP 获取
local-ip-address = "0.6"
# 静态初始化
once_cell = "1.19"
# 流处理
tokio-stream = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
